--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-BUILDER_PUBLIC_KEY=
-SWELL_STORE_ID=
-SWELL_PUBLIC_KEY=
+BUILDER_PUBLIC_KEY=ad49eda7bab74ba98450b59430edb5b9
+SWELL_STORE_ID=swagteststore
+SWELL_PUBLIC_KEY=pk_7RHnuMLQGrTJFfPLkjlx0JTUoqoXH6iV	
