--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@builder.io/widgets": "^1.2.19",
     "@netlify/plugin-nextjs": "^3.1.0-experimental-odb.2",
     "@reach/portal": "^0.11.2",
+    "@tailwindcss/aspect-ratio": "^0.3.0",
     "@tailwindcss/ui": "^0.6.2",
     "@testing-library/react-hooks": "^3.7.0",
     "@theme-ui/components": "^0.6.2",
@@ -89,7 +90,7 @@
     "react-sticky": "^6.0.3",
     "react-ticker": "^1.2.2",
     "swell-js": "^3.10.7",
-    "tailwindcss": "^1.9",
+    "tailwindcss": "^1.9.6",
     "theme-ui": "^0.6.2",
     "traverse": "^0.6.6"
   },
